src/kubernetes-app/drupal/drupal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: drupal
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: "/C=US/O=DigiCert Inc/OU=www.digicert.com/CN=RapidSSL TLS RSA CA G1"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "*.learn-data.dev"
    secretName: ingress-cert
  rules:
  - host: drupal.learn-data.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drupal
            port: 
              number: 80
